--- a/.classpath
+++ b/.classpath
@@ -4,11 +4,17 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/junit-4.7.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/slim3-1.0.15.jar" sourcepath="libsrc/slim3-1.0.15-sources.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-core-4.0.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-async-4.0.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-examples-4.0.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-media-support-4.0.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-stream-4.0.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-codec-1.8.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/jackson-annotations-2.6.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/jackson-core-2.6.3.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/jackson-databind-2.6.3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/joda-time-2.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
