--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-examples-4.0.4.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-media-support-4.0.4.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/twitter4j-stream-4.0.4.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-codec-1.8.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/jackson-annotations-2.6.0.jar"/>
@@ -19,5 +18,7 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/appengine-gcs-client-0.5-javadoc.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/appengine-gcs-client-0.5-sources.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/appengine-gcs-client-0.5.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jsoup.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
